fixed grid alignment issues

--- a/src/style/components/App.scss
+++ b/src/style/components/App.scss
@@ -2,11 +2,11 @@
     background: $full-black;
     width: 100%;
     height: 100vh;
-    max-height: fit-content;
+    min-height: 900px;
     color: $pink1;
     font-family: $pt-regular;
     display: grid;
-    grid-template-columns: 5% 75% 20%;
+    grid-template-columns: minmax(105px, 5%) minmax(400px, 75%) minmax(20%, 350px);
     grid-template-rows: 100%;
     grid-template-areas: 
     "Nav Home Playing"
