--- a/src/style/components/Playing.scss
+++ b/src/style/components/Playing.scss
@@ -6,16 +6,16 @@
     padding: 0.5rem;
     display: flex;
     flex-direction: column;
+    
 }
 .nexton{
    display: flex;
    flex-direction: column;
-   flex: 1 0 450px;
 }
 .playing-track{
  outline: 2px solid white;
  height: 450px;
- overflow-y: scroll;
+
  padding: 0.2rem;
  img{
     width: 55px;
