--- a/src/style/main/main.css
+++ b/src/style/main/main.css
@@ -198,11 +198,11 @@
   background: #000000;
   width: 100%;
   height: 100vh;
-  max-height: fit-content;
+  min-height: 900px;
   color: #fff0f3;
   font-family: "PTSans-Regular", "Poppins", sans-serif, sans-serif;
   display: grid;
-  grid-template-columns: 5% 75% 20%;
+  grid-template-columns: minmax(105px, 5%) minmax(400px, 75%) minmax(20%, 350px);
   grid-template-rows: 100%;
   grid-template-areas: "Nav Home Playing"; }
 
@@ -347,13 +347,11 @@
 
 .nexton {
   display: flex;
-  flex-direction: column;
-  flex: 1 0 450px; }
+  flex-direction: column; }
 
 .playing-track {
   outline: 2px solid white;
   height: 450px;
-  overflow-y: scroll;
   padding: 0.2rem; }
   .playing-track img {
     width: 55px; }
